--- a/ML/learning/cat_boost_final.ipynb
+++ b/ML/learning/cat_boost_final.ipynb
@@ -5,8 +5,8 @@
    "id": "2ebe0b502a397920",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-14T03:03:10.742026Z",
-     "start_time": "2025-03-14T03:03:09.415050Z"
+     "end_time": "2025-03-23T07:08:27.613578Z",
+     "start_time": "2025-03-23T07:08:25.728890Z"
     }
    },
    "source": [
@@ -20,13 +20,13 @@
     "from catboost import CatBoostClassifier"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-14T03:03:13.793923Z",
-     "start_time": "2025-03-14T03:03:12.196361Z"
+     "end_time": "2025-03-23T07:08:29.664914Z",
+     "start_time": "2025-03-23T07:08:28.097795Z"
     }
    },
    "cell_type": "code",
@@ -38,15 +38,10 @@
    ],
    "id": "78672462c54c5706",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-14T03:04:15.681058Z",
-     "start_time": "2025-03-14T03:04:15.625843Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 학습 데이터 준비\n",
@@ -66,33 +61,42 @@
     "    'TRAVEL_STYL_4', 'TRAVEL_STYL_5', 'TRAVEL_STYL_6', 'TRAVEL_STYL_7',\n",
     "    'TRAVEL_STYL_8', 'TRAVEL_MOTIVE_1', 'VISIT_AREA_TYPE_CD',\n",
     "    'TRAVEL_COMPANIONS_NUM', 'TRAVEL_MISSION_INT'\n",
-    "]\n",
-    "\n",
-    "df_learning['TRAVEL_COMPANIONS_NUM'].unique()"
+    "]"
+   ],
+   "id": "201823825cd798af",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-23T07:11:20.150332Z",
+     "start_time": "2025-03-23T07:11:20.137539Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print('1점', df_learning[df_learning['DGSTFN'] == 1].count().iloc[1])\n",
+    "print('2점', df_learning[df_learning['DGSTFN'] == 2].count().iloc[1])\n",
+    "print('3점', df_learning[df_learning['DGSTFN'] == 3].count().iloc[1])\n",
+    "print('4점', df_learning[df_learning['DGSTFN'] == 4].count().iloc[1])\n",
+    "print('5점', df_learning[df_learning['DGSTFN'] == 5].count().iloc[1])"
    ],
    "id": "db50445ee85577e",
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user1\\AppData\\Local\\Temp\\ipykernel_2740\\3506806361.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df_learning['GENDER'] = df_learning['GENDER'].replace({'남': 1, '여': 0}).astype('int32')\n"
+      "1점 288\n",
+      "2점 554\n",
+      "3점 3671\n",
+      "4점 11508\n",
+      "5점 14751\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.,  1.,  3.,  2.,  4.,  5.,  7.,  6., 11.,  9., 20.,  8., 14.,\n",
-       "       19., 10., 12., 13., 16., 15., 17.])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -152,7 +156,7 @@
     "class_weights = {1.0: 1, 2.0: 1, 3.0: 2, 4.0: 1, 5.0: 1.5}  # 5.0에 높은 가중치\n",
     "# CatBoost 모델 초기화 (early_stopping_rounds 추가)\n",
     "base_model = CatBoostClassifier(\n",
-    "    loss_function='MultiClass', # MultiClass 대신 MultiClassOneVsAll 사용 → 5.0을 이진 분류처럼 강화:\n",
+    "    loss_function='MultiClass',\n",
     "    eval_metric='Accuracy',\n",
     "    cat_features=cat_features_extended,\n",
     "    random_seed=42,\n",
